--- a/vercel.json
+++ b/vercel.json
@@ -4,7 +4,7 @@
   "framework": "vite",
   "functions": {
     "api/**/*.js": {
-      "runtime": "vercel-php@0.6.0"
+      "runtime": "nodejs18.x"
     }
   },
   "rewrites": [
